@@ -1,3 +1,4 @@
+<<<<<<< .merge_file_Z5u3uX
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -161,3 +162,169 @@
     </profile>
   </profiles>
 </project>
+=======
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>org.geogit</groupId>
+    <artifactId>geogit</artifactId>
+    <version>0.8-SNAPSHOT</version>
+    <relativePath>../parent/pom.xml</relativePath>
+  </parent>
+
+  <artifactId>geogit-cli-app</artifactId>
+  <packaging>pom</packaging>
+  <name>GeoGit CLI App</name>
+    
+  <dependencies>
+    <dependency>
+      <groupId>org.geogit</groupId>
+      <artifactId>geogit-cli</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.geogit</groupId>
+      <artifactId>geogit-geotools</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.geogit</groupId>
+      <artifactId>geogit-osm</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.geogit</groupId>
+      <artifactId>geogit-web-app</artifactId>
+      <version>${project.version}</version>
+      <classifier>classes</classifier>
+    </dependency>
+
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>appassembler-maven-plugin</artifactId>
+        <configuration>
+          <!-- Extra JVM arguments that will be included in the bin scripts -->
+          <extraJvmArguments>-Xmx2G -XX:MaxPermSize=128m -Dorg.geotools.referencing.forceXY=true -XX:-HeapDumpOnOutOfMemoryError -XX:+UseCompressedOops</extraJvmArguments>
+          <!-- set alternative assemble directory -->
+          <assembleDirectory>${project.build.directory}/geogit-build</assembleDirectory>
+          <repositoryLayout>flat</repositoryLayout>
+          <useWildcardClassPath>true</useWildcardClassPath>
+         <useAsterikClassPath>true</useAsterikClassPath>
+          <platforms>
+            <platform>windows</platform>
+            <platform>unix</platform>
+          </platforms>
+          <programs>
+            <program>
+              <mainClass>org.geogit.cli.GeogitCLI</mainClass>
+              <name>geogit</name>
+            </program>
+            <program>
+              <mainClass>org.geogit.cli.GeogitConsole</mainClass>
+              <name>geogit-console</name>
+            </program>
+            <program>
+              <mainClass>org.geogit.cli.GeogitPy4JEntryPoint</mainClass>
+              <name>geogit-gateway</name>
+            </program>
+          </programs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>assemble</id>
+            <goals>
+              <goal>assemble</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>org.geogit.cli.GeogitCLI</mainClass>
+                    </manifest>
+                </archive>
+                <descriptors>
+                    <descriptor>cli-assembly-zip.xml</descriptor>
+                </descriptors>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>assemble-dir</id>
+                    <configuration>
+                        <appendAssemblyId>false</appendAssemblyId>
+                        <finalName>geogit</finalName>
+                        <archive>
+                            <manifest>
+                                <mainClass>org.geogit.cli.GeogitCLI</mainClass>
+                            </manifest>
+                        </archive>
+                        <descriptors>
+                            <descriptor>cli-assembly-dir.xml</descriptor>
+                        </descriptors>
+                    </configuration>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>assemble-zip</id>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>tree</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>tree</goal>
+            </goals>
+            <configuration>
+              <outputFile>${project.build.directory}/geogit-build/dependency-tree.txt</outputFile>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+    </plugins>
+  </build>
+
+ <profiles>
+    <profile>
+      <id>oracle</id>
+      <dependencies>
+        <dependency>
+          <groupId>com.oracle</groupId>
+          <artifactId>ojdbc14</artifactId> 
+          <version>10.2.0.3.0</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    <profile>
+      <id>sqlServer</id>
+      <dependencies>
+        <dependency>
+          <groupId>com.microsoft</groupId>
+          <artifactId>sqljdbc4</artifactId> 
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
+</project>
+>>>>>>> .merge_file_dNTJcZ
